added cart logic, now user is able to send the cart content to Mari

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VITE_EMAILJS_SERVICE_ID="service_0mvxgl4"
 VITE_EMAILJS_TEMPLATE_ID="template_kwcdy47"
 VITE_EMAILJS_PUBLIC_KEY="SAr6zD1n2ioYzmO7-"
+VITE_EMAILJS_TEMPLATE_ID_CART="template_40epqi9"
